[package]
name = "mqttc"
version = "0.1.4"
authors = ["Maksim V. <inre.storm@gmail.com>"]
description = "Mqttc is a client for the MQTT protocol."
repository = "https://github.com/inre/rust-mq"
license = "MIT"

[features]
default = ["ssl"]
ssl = ["netopt/ssl"]

[dependencies]
log = "0.4"
rand = "0.8.5"
byteorder = "1.5"
mqtt3 = { path = "../mqtt3" }
netopt = { path = "../netopt" } # { version = "0.1.3", default-features = false }
term = "0.7.0"
thiserror = "1.0.59"

[dev-dependencies]
env_logger = "0.6"
